src/containers/Common/components/CommonListContainer/CommonListItem/index.scss
@import "../../../../../constants.scss";

.common-item {
  width: 100%;
  max-width: 300px;
  height: 210px;
  border-radius: 24px;
  box-shadow: 0 3px 8px 0 #001a3614;
  background-color: #ffffff;
  &:hover {
    box-shadow: 0 9px 15px 0 #001a3614;
    // .overlay {
    //   display: none;
    // }
  }
  a {
    text-decoration: none;
  }
  .image-wrapper {
    height: 128px;
    width: 100%;
    width: 300px;
    position: relative;
    border-radius: 24px 24px 0 0;
    display: flex;
    .overlay {
      position: absolute;
      right: 0;
      bottom: 0;
      width: 100%;
      height: 100%;
      z-index: 1;
      border-radius: 24px 24px 0 0;
      background: rgba(0, 26, 54, 0.3);
    }
    img {
      position: absolute;
      right: 0;
      bottom: 0;
      width: 100%;
      height: 100%;
      object-fit: fill;
      border-radius: 24px 24px 0 0;
      background-color: $purple;
    }
    .common-information {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      text-align: center;
      font-family: NotoSerifSC-Bold;
      width: 100%;
      .name {
        z-index: 1;
        display: block;
        width: 100%;
        text-shadow: 0 2px 4px #00000033;
        font-size: 20px;
        font-weight: bold;
        color: $white;
      }
      .description {
        z-index: 1;
        display: block;
        width: 100%;
        text-shadow: 0 2px 4px #00000033;
        font-size: 12px;
        font-weight: 300;
        color: $white;
        &:lang(he) {
          font-family: Assistant-Light;
        }
      }
    }
  }
  .additional-information {
    display: flex;
    flex-direction: row;
    text-align: center;
    justify-content: center;
    align-items: center;
    height: 80px;
    .item {
      flex: 50%;
      .title {
        font-size: 12px;
        font-weight: 600;
        text-align: center;
        color: $light-gray-2;
        margin-bottom: 8px;
      }
      .value {
        font-size: 16px;
        font-weight: bold;
        line-height: 1.5;
        text-align: center;
        color: #001a36;
      }
    }
  }
}

@media only screen and (max-width: $mobile-breakpoint) {
}

